Update sonar properties

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,9 +93,37 @@ jobs:
 
   sonarqube-scan:
     runs-on: ubuntu-latest
+    services:
+      db:
+        image: postgres:17
+        env:
+          POSTGRES_DB: test_postgres
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: mysecurepassword
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
     steps:
       - name: Check out
         uses: actions/checkout@v4
+
+      - name: Set up the environment
+        uses: ./.github/actions/setup-python-env
+        with:
+          python-version: 3.9
+
+      - name: Run tests
+        run: uv run pytest
+        env:
+          TEST_POSTGRES_DB: test_postgres
+          TEST_POSTGRES_USER: postgres
+          TEST_POSTGRES_PASSWORD: mysecurepassword
+          TEST_POSTGRES_HOST: localhost
+          TEST_POSTGRES_PORT: 5432
 
       - name: SonarQube Scan
         uses: sonarsource/sonarqube-scan-action@v4
