Update sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,4 +12,5 @@ sonar.python.coverage.reportPaths=coverage.xml
 # TODO: Enable bandit once it's set up
 # sonar.python.bandit.reportPaths=bandit.json
 sonar.python.xunit.reportPath=coverage.xml
-sonar.python.version=3.12
+# the minumum supported python version
+sonar.python.version=3.9
