--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,6 +87,7 @@ line-length = 120
 fix = true
 
 [tool.ruff.lint]
+preview = true # enable linting rules in preview
 select = [
   "YTT", # flake8-2020
   "S",   # flake8-bandit
@@ -103,25 +104,28 @@ select = [
   "PGH", # pygrep-hooks
   "UP",  # pyupgrade
   "RUF", # ruff
+  "DOC", # pydoclint
   "D",   # pydocstyle
 ]
 ignore = [
-  "E731", # DoNotAssignLambda
-  "S101", # assert
-  "D100", # Missing docstring in public module
-  "D104", # Missing docstring in public package
-  "D105", # Missing docstring in magic method
+  "E731",   # DoNotAssignLambda
+  "S101",   # assert
+  "D100",   # Missing docstring in public module
+  "D104",   # Missing docstring in public package
+  "D105",   # Missing docstring in magic method
+  "DOC402", # yield is not documented in docstring
+  "DOC502", # Raised exception is not explicitly raised
 ]
 
-[tool.ruff.format]
-preview = true
-
 [tool.ruff.lint.per-file-ignores]
-"examples/*" = ["D"]
-"tests/*" = ["D"]
+"examples/*" = ["D", "DOC"]
+"tests/*" = ["D", "DOC"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
+
+[tool.ruff.format]
+preview = true
 
 [tool.coverage.run]
 branch = true
